k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucamedtech
  namespace: lucamedtech
  labels:
    app: lucamedtech
    creator: cookie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lucamedtech
  template:
    metadata:
      labels:
        app: lucamedtech
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: lucamedtech
        image: lucamedtech:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "500m"
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
