k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucamedtech
  namespace: lucamedtech
spec:
  selector:
    app: lucamedtech
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
