k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucamedtech
  namespace: lucamedtech
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($uri !~* ^/_next/static/) {
        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
        add_header Pragma "no-cache" always;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: lucamedtech.hyfda.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lucamedtech
            port:
              number: 80
  tls:
  - hosts:
    - lucamedtech.hyfda.dk
    secretName: cert
